# PMT

./: .gitattributes  .gitignore  LICENSE  README.md  THIRD_PARTY_LICENSES  pyproject.toml
TCRS/: .gitignore  README.md  visualize_npz.py
cluster_yaml/: README.md  multimotionv2_flat.yaml  perceptive_motion_token_tracker.yaml  pmt_pcrbt.yaml  pmt_pcrbt_100style.yaml  pmt_stepping_stone.yaml  real_add_taskrew.yaml  real_backflip_teacher.yaml  real_cartwheel_bigmap.yaml  real_distill_latent_anchor.yaml  real_pmt_real_add.yaml  real_pmt_real_backflip.yaml  real_pmt_real_bpo.yaml  real_pmt_real_pmt.yaml  real_pmt_real_sonic.yaml  real_pmt_real_streaming.yaml  smoke_100style.yaml  smoke_2gpu.yaml  smoke_adaptive.yaml  smoke_add.yaml  smoke_all.yaml  smoke_backflip.yaml  smoke_backflip_trim51.yaml  smoke_bpo.yaml  smoke_cartwheel_bigmap.yaml  smoke_distill_latent_anchor.yaml  smoke_distill_stepping_stone.yaml  smoke_distill_stepping_stone_stub.yaml  smoke_fpo_plus_flat.yaml  smoke_pcrbt.yaml  smoke_perceptive_motion_token_tracker.yaml  smoke_pmt_stepping_stone.yaml  smoke_rgmt.yaml  smoke_sonic.yaml  smoke_streaming.yaml  smoke_terrain_flat_mix.yaml  smoke_uniform.yaml  terrain_flat_mix.yaml  walk_dance_bigmap.yaml
configs/: README.md  paths.yaml
docs/: ARCHITECTURE.md  MJLAB_BACKEND_PLAN.md  MJLAB_USAGE.md  MOTION_DATA_FORMAT.md  USAGE.md  compat_matrix.md
motion_tracking_rl/: __init__.py  compat.py  registry.py
pmt_tasks/: README.md  __init__.py  asset_config.py  builder.py  derive.py  path_defaults.py  registry_gym.py  tracking_env_cfg.py
scripts/: play.py  (+6 more)
(+519 files in other folders)
